--- a/src/assets/scss/_reset.scss
+++ b/src/assets/scss/_reset.scss
@@ -1,3 +1,10 @@
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+  outline: none;
+}
+
 html,
 body,
 div,
@@ -79,14 +86,13 @@ time,
 mark,
 audio,
 video {
-  margin: 0;
   padding: 0;
-  border: 0;
-  font-size: 100%;
+  margin: 0;
   font: inherit;
+  font-size: 100%;
   vertical-align: baseline;
+  border: 0;
 }
-
 
 article,
 aside,
@@ -114,25 +120,61 @@ ul {
 blockquote,
 q {
   quotes: none;
-}
 
-blockquote {
-  &:before,
-  &:after {
-    content: '';
+  &::before,
+  &::after {
+    content: "";
     content: none;
   }
 }
 
-q {
-  &:before,
-  &:after {
-    content: '';
-    content: none;
-  }
+sub,
+sup {
+  position: relative;
+  font-size: 75%;
+  line-height: 0;
+  vertical-align: baseline;
+}
+
+sup {
+  top: -0.5em;
+}
+
+sub {
+  bottom: -0.25em;
 }
 
 table {
-  border-collapse: collapse;
   border-spacing: 0;
+  border-collapse: collapse;
+}
+
+input,
+textarea,
+button {
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+}
+
+select {
+  text-indent: 0.01px;
+  text-overflow: "";
+  border: 0;
+  border-radius: 0;
+}
+
+select::-ms-expand {
+  display: none;
+}
+
+code,
+pre {
+  font-family: monospace;
+  font-size: 1em;
+}
+
+button {
+  background-color: #fff;
+  border: none;
 }
