--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,5 +1,36 @@
+// 自定義的變數
 @import "./reset";
-@import "./variasble";
-@import "./mixins.scss";
-@import "./base";
-@import "./font"
+@import "./helpers/custom";
+
+// 必要的
+@import "/node_modules/bootstrap/scss/functions";
+@import "/node_modules/bootstrap/scss/variables";
+@import "/node_modules/bootstrap/scss/mixins";
+@import "/node_modules/bootstrap/scss/variables-dark";
+@import "/node_modules/bootstrap/scss/maps";
+@import "/node_modules/bootstrap/scss/utilities";
+
+// Layout & Components
+@import "/node_modules/bootstrap/scss/root";
+@import "/node_modules/bootstrap/scss/reboot";
+@import "/node_modules/bootstrap/scss/type";
+@import "/node_modules/bootstrap/scss/images";
+@import "/node_modules/bootstrap/scss/containers";
+@import "/node_modules/bootstrap/scss/grid";
+@import "/node_modules/bootstrap/scss/buttons";
+
+@import "/node_modules/bootstrap/scss/carousel";
+@import "/node_modules/bootstrap/scss/forms";
+@import "/node_modules/bootstrap/scss/modal";
+// 自定義 Utilities
+@import "./helpers/utilities";
+// Utilities
+@import "/node_modules/bootstrap/scss/utilities/api";
+
+// swiper
+@import "./helpers/swiper";
+
+// sweetalert2
+@import "./helpers/sweetalert2";
+
+@import "./helpers/base";
